Recent Changes for wxPython
=====================================================================

2.8.6.1
-------
*

wxMac: Fixed paste bug when the clipboard contains unicode text.

AUI: Added missing event binders for the notebok tab events.

wxMac: Fixed bug that resulted in portions of virtual listctrl's to
not be repainted when scrolling with PgUp/PgDown/Home/End.

wxMac: Fixed bug that broke tab traversal when tabbing runs into a
wx.StaticBox. 

wxGTK:  Add wx.Window.GetGtkWidget.

All: Undprecated wx.ListCtrl.[G|S]etItemSpacing

All: Fixed wx.Palette constructor wrapper.  It takes three seqences of
integers to specify the R, G, and B values for each color in the
palette, which must all be the same length and which must contain
integer values in the range of 0..255 inclusive.

Thanks to some grunt work from Edouard TISSERANT, wxPython now has the
needed tweaks in config.py to be able to be built with mingw32.  See
BUILD.txt for details.

Changes in wx.GraphicsContext to make things like the half-pixel
offsets more consistent across platforms.





2.8.6.0
-------
* 27-Sept-2007

This release is mostly about fixing a number of bugs and
inconsistencies in wxWidgets and wxPython.  In other words, there have
been a whole lot more changes than what is listed here, but they are
not new features or API visible changes, which is what are usually
listed in this file.

Some Menu APIs added to make things more consistent.  Added
wx.MenuBar.SetMenuLabel, wx.MenuBar.GetMenuLabel,
wx.MenuBar.GetMenuLabelText, wx.Menu.GetLabelText,
wx.MenuItem.SetItemLabel, wx.MenuItem.GetItemLabel,
wx.MenuItem.GetItemLabelText, wx.MenuItem.GetLabelText.  The
Get...Label functions get the raw label with mnemonics and
accelerators, and the Get...LabelText functions get the text only,
without mnemonics/accelerators.

Added wx.BORDER_THEME style.  This style will attempt to use a theme
specific style, if the current platform and environment is themeable