@@ -17,7 +17,7 @@ snapshot from <a class="reference" href="http://wxWidgets.org/snapshots/">http:/
 one of the released wxPython-src-2.8.* tarballs.  I'll also assume that
 you know your way around your system, the compiler, etc. and most
 importantly, that you know what you are doing!  ;-)</p>
-<p>If you want to also install the version of wxPython you build to be in
+<p>If you want to also install the version of wxPython you build into
 your site-packages dir and be your default version of wxPython, then a
 few additional steps are needed, and you may want to use slightly
 different options.  See the <a class="reference" href="INSTALL.html">INSTALL</a> document for more details.  If
@@ -40,14 +40,14 @@ use it.  See below for an example.</p>
 <p>In the text below I'll use WXDIR with environment variable syntax
 (either $WXDIR or %WXDIR%) to refer to the top level directory where
 your wxWidgets and wxPython sources are located.  It will equate to
-whereever you checked out the wxWidgets module from CVS, or untarred
+where ever you checked out the wxWidgets code from SVN, or untarred
 the wxPython-src tarball to.  You can either substitute the $WXDIR text
 below with your actual dir, or set the value in the environment and
 use it just like you see it below.</p>
 <p>If you run into what appears to be compatibility issues between
 wxWidgets and wxPython while building wxPython, be sure you are using
 the wxWidgets sources included with the wxPython-src tarball or the
-CVS snapshot, and not a previously installed version or a version
+SVN snapshot, and not a previously installed version or a version
 installed from one of the standard wxWidgets installers.  With the
 &quot;unstable&quot; releases (have a odd-numbered minor release value, where
 the APIs are allowed to change) there are often significant
@@ -76,12 +76,12 @@ cd bld
              --with-gnomeprint \
              --with-opengl \
              --enable-debug \
+             --enable-debug_gdb \
              --enable-geometry \
              --enable-graphics_ctx \
              --enable-sound --with-sdl \
              --enable-mediactrl \
              --enable-display \
-             --disable-debugreport \
 </pre>
 <p>On OS X of course you'll want to use --with-mac instead of
 --with-gtk and --with-gnomeprint.</p>
@@ -154,7 +154,7 @@ wxWidgets you just need to add /opt/wx/2.8/bin to the PATH and set
 LD_LIBRARY_PATH (or DYLD_LIBRARY_PATH on OS X) to /opt/wx/2.8/lib.</p>
 </li>
 <li><p class="first">I also have a script to help me build wxPython and it is checked in
-to the CVS as wxWidgets/wxPython/b, but you probably don't want to
+to the source repository as wxPython/b, but you probably don't want to
 use it as it's very cryptic and expects that you want to run SWIG,
 so if you don't have the latest patched up version of SWIG then
 you'll probably get stuck.  So in this document I'll just give the
@@ -236,7 +236,7 @@ does not automatically add libgcc to the link step.</p>
 </ol>
 </div>
 <div class="section">
-<h1><a id="building-on-windows" name="building-on-windows">Building on Windows</a></h1>
+<h1><a id="building-on-windows-with-ms-visual-c" name="building-on-windows-with-ms-visual-c">Building on Windows with MS Visual C++</a></h1>
 <p>The Windows builds currently require the use of Microsoft Visual C++.
 Theoretically, other compilers (such as mingw32 or the Borland
 compilers) can also be used but I've never done the work to make that
@@ -422,6 +422,136 @@ set PYTHONPATH=%WXDIR%\wxPython
 cd %WXDIR\wxPython\demo
 python demo.py
 </pre>
+</li>
+</ol>
+</div>
+<div class="section">
+<h1><a id="building-on-windows-with-cygwin-mingw32" name="building-on-windows-with-cygwin-mingw32">Building on Windows with Cygwin/MingW32</a></h1>
+<p>Starting with release 2.8.6.1 wxPython is also able to be built for
+the stock Python on Windows using the cywin environnment and the
+mingw32 compiler.  It can probably also be done with a few
+modifications to these instructions without cygwin, using just the
+standalone mingw32 compiler and MSYS, but that has not been tested
+yet.  Another potential option is to build wxWidgets and wxPython for
+cygwin and the cygwin version of Python, but the details for that also
+has not yet been worked out.  If you do work out the details then
+please send me patches for this document.</p>
+<p>This build has some aspects of both of the builds desctibed above, but
+leans more towards the Unix-like style of doing things.  If you have
+any questions about the steps detailed in these instructions please
+read the above sections as well, as the answer could be there.</p>
+<ol class="arabic">
+<li><p class="first">If you don't already have cygwin installed on your Windows box
+please do so know.  Make sure you have these additional packages
+installed as well:</p>
+<blockquote>
+<p>autoconf
+automake
+gcc-core
+gcc-g++
+gcc-mingw
+gcc-mingw-core
+gcc-mingw-g++
+make
+mingw-runtime
+mingw-zlib
+patch
+w32api</p>
+</blockquote>
+</li>
+<li><p class="first">Create a build directory in the main wxWidgets dir, and configure
+wxWidgets.  Notice that we set some environment variables so
+configure will know to override the defaults for some compiler and
+linker flags settings, this is what causes the mingw32 compiler to
+be used even though we are in the full cygwin environment:</p>
+<pre class="literal-block">
+cd $WXDIR
+mkdir bld
+cd bld
+
+CC=&quot;gcc -mno-cygwin -mwindows&quot;  \
+CXX=&quot;g++ -mno-cygwin -mwindows&quot; \
+LDFLAGS=&quot;-mno-cygwin -mwindows&quot; \
+../configure \
+    --with-msw \
+    --build=i686-pc-mingw32 \
+    --prefix=/opt/wx/2.8 \
+    --enable-unicode \
+    --enable-debug \
+    --enable-debug_gdb \
+    --enable-geometry \
+    --enable-display \
+    --enable-shared \
+    --with-expat=builtin \
+    --with-regex=builtin \
+    --with-zlib=builtin
+</pre>
+<p>Read the note above in the unix-like section for why I used
+/opt/wx/2.8 for the prefix, and for some discussion about what your
+options are.  For a cygwin environment the default of using
+/usr/local for the prefix would also be a good choice.  Note that
+the wx DLLs will be installed to {prefix}/lib and since DLLs need
+to be found in the PATH you'll either want to add that dir to your
+PATH if it isn't already there, or be prepared to move those DLLs
+someplace else when the build is finished.</p>
+<p>If you don't need to use the debugger you can leave off the
+--enable-debug and --enable-debug_gdb flags, and add the
+--enable-optimise flag to cause the compiler to generate more
+efficient code.  I recommend that you also add the
+--enable-debug_flag flag so that some C++ runtime checks will be
+turned into Python exceptions when they fail.</p>
+</li>
+<li><p class="first">To build and install wxWidgets you could just use the &quot;make&quot;
+command but there are a couple other libraries besides the main
+wxWidgets libs that also need to be built so I make a script called
+&quot;.make&quot; to do it all for me so I don't forget anything.  This is
+what it looks like:</p>
+<pre class="literal-block">
+make $* \
+    &amp;&amp; make -C contrib/src/gizmos $* \
+    &amp;&amp; make -C contrib/src/stc $*
+</pre>
+<p>So you just use .make as if it where make:</p>
+<pre class="literal-block">
+.make
+.make install
+</pre>
+<p>This is going to take a while as GCC on Windows is very slow.  This
+would be a good time to go take a nap, or have dinner, or both.
+When it's done you should have an installed set of files under
+/opt/wx/2.8 (or whatever prefix you used) containing just
+wxWidgets.  Now to use this version of wxWidgets you just need to
+add /opt/wx/2.8/bin and /opt/wx/2.8/lib to the PATH.</p>
+</li>
+<li><p class="first">Building wxPython is very similar to how it is done for the other
+build styles.  We simply run the setup.py in the wxPython dir, and
+pass it some commands and flags.  Make sure that the Python that
+you use for running setup.py is the one that you want to use when
+running wxPython apps.  In other words, if you have the cygwin
+Python installed, or multiple versions of stock Windows Python,
+then use the full pathname to python.exe to make sure you use the
+right one.</p>
+<blockquote>
+<dl class="docutils">
+<dt>python setup.py COMPILER=mingw32 </dt>
+<dd><p class="first last">BUILD_GLCANVAS=0 BUILD_ACTIVEX=0 WX_CONFIG=&quot;bash.exe -e /opt/wx/2.8/bin/wx-config&quot; build_ext --inplace</p>
+</dd>
+</dl>
+</blockquote>
+<p>This builds the wxPython extension modules and places them directly
+in the wx package dir located in the source tree.  This is
+convenient for testing the build or running the demo and samples
+without needing to do an install to site-packages and possibly
+disturbing the wxPython you already have installed.  You just need
+to set PYTHONPATH so Python will find this version of the wx
+package first.  When you are ready to install this build you can do
+it by adding 'install' to the command line and running it again.
+See the INSTALL.txt file for more details.</p>
+<p>Notice that we had to turn off the building of the wx.glcanvas and
+wx.activex modules.  There are also a few other features that are
+not currently supported by this build, most notably the
+wx.GraphicsContext and wx.media.MediaCtrl families of classes.
+Hopefully that will improve over time.</p>
 </li>
 </ol>
 </div>
